# CrossGuard

./: .coverage  .gitignore  CLAUDE.md  GUI_GUIDE.md  PARSER_COMPLETION_PLAN.md  README.md  SETUP_TEST_GUIDE.md  TEST_COMMANDS.md  THESIS_IMPLEMENTATION_PLAN.md  TODO.md  compatibility_report.html  compatibility_report.json  compatibility_report.txt  crossguard.db  latex_edits.md  pyproject.toml  requirements.txt  run_gui.py  scope.json  test_css_parser.py  test_main_analyzer.py  thesis_doc_updates.md
Code/: CLAUDE.md  pyproject.toml  requirements.txt
LaTeX/: README.md  elteikthesis_en.tex
Paper/: CrossGuard_TDK_Roadmap.docx  TDK_WINNING_GUIDE.md  comparison_results.md  compatibility_ecosystem.md  generate_report.py  literature_review.md  papers_we_read.md
Reference/: elte_ik_bsc_thesis_assessment_criteria.docx
code/: .gitignore  CLI_COMMANDS.md  Launcher.bat  Launcher.command  pyproject.toml  requirements.txt  run_gui.py
docs/: PROJECT_CONTEXT.md  generate_uml.py  generate_uml_highlevel.py  generate_usecase.py  uml_class_diagram.md
examples/: sample.css  sample.html  sample.js
final_test/: TEST_GUIDE.md  example.css  example.html
final_tests/: example.js
latex/: README.md
reference/: README.md
sample_pdf_gen/: classic_report.py  report.json
src/: __init__.py
test_files/: comprehensive_css_test.css  comprehensive_html_test.html  comprehensive_js_test.js  css_edge_cases.css  html_edge_cases.html  index.js  index_copy.css  js_edge_cases.js  test_accessibility.html  test_accessibility_good.html  test_custom_rule.css  test_custom_rule.html  test_custom_rule.js
tests/: __init__.py  conftest.py  test_analyzer_main.py  test_cli_manual.sh  test_compatibility.py  test_scorer.py  (+5 more)
(+740 files in other folders)
